--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
             </li>
         </script>
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+        <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>-->
         <script src="http://cdn.jsdelivr.net/handlebarsjs/2.0.0/handlebars.min.js"></script>
-        <script src="http://google.com/jsapi"></script>
+       
+        <script src="js/jsapi.js"></script>
         <script src="js/app.js"></script>
-
+         <script src="js/jquery-3.2.1.min.js"></script>
         <script src="jasmine/spec/feedreader.js"></script>
     </body>
 </html>
